--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,7 +96,8 @@ services:
       # 강제 리다이렉트 추가
       - "--entrypoints.web.http.redirections.entrypoint.to=websecure"
       - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
-      - "--certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory" # 프로덕션 환경에서는 주석 처리
+      # 프로덕션 환경에서는 주석 처리
+      # - "--certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
     ports:
       - "80:80"
       - "443:443"
